#281 fixing error messages alignment

--- a/omod/src/main/compass/sass/account.scss
+++ b/omod/src/main/compass/sass/account.scss
@@ -16,6 +16,10 @@ form fieldset {
 	strong, .form-header {
 		margin-top: 10px;
 	}
+
+	p {
+		text-align: left;
+	}
 }
 
 .emr_userDetails {
